ask about reset

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 
 	<div id="controls">
 
-		<a data-bind="click: reset">
+		<a data-bind="click: showOptions">
 			<i class="fa fa-gear"></i>
 		</a>
-		<a data-bind="click: reset">
+		<a data-bind="click: askAboutReset">
 			<i class="fa fa-rotate-left"></i>
 		</a>
 
