--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <head>
 
 	<meta charset="utf-8">
-	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 	<link rel="stylesheet" href="the.css">
 	<title>Flood</title>
 
@@ -33,8 +32,8 @@
 	</div>
 
 	<div id="controls">
-		<a data-bind="click: askAboutReset">
-			<i class="fa fa-rotate-left"></i>
+		<a href="#" data-bind="click: askAboutReset">
+			<img src="restart.svg">
 		</a>
 	</div>
 
