minor: make some HTML one line

--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
 <table>
 	<tbody data-bind="foreach: rows">
 		<tr data-bind="foreach: $data">
-			<td data-bind="
-				css: color,
-				click: flood">&nbsp;</td>
+			<td data-bind="css: color, click: flood">&nbsp;</td>
 		</tr>
 	</tbody>
 </table>
